# ascii-engine

./: .gitignore  Cargo.toml  README.md  config.toml
.github/workflows/: ci.yml
engine_math/: Cargo.toml
engine_math/src/: coordinates.rs  lib.rs  prelude.rs  rectangle.rs
examples/: square.model  test_screen.rs
examples/animation_tests/: animation_actor.rs  main.rs  message_prompt.rs  player.rs  result_traits.rs  world.rs
examples/model_tests/: collision_data.rs  main.rs  screen_config.rs
examples/models/: air_square.model  square.animate  square.model  teleport_pad.model  wall.model
examples/models/square/: data.animate  teleport.animate  test.animate
examples/object_tests/: main.rs  screen_config.rs
examples/worlds/: large_test_world.wrld  test_world.wrld
model_data_structures/: Cargo.toml  config.toml
model_data_structures/src/: config_builder.rs  errors.rs  lib.rs  prelude.rs
model_data_structures/src/models/: animation.rs  errors.rs  hitboxes.rs  model_appearance.rs  model_data.rs  model_file_parser.rs  model_movements.rs  sprites.rs  stored_models.rs  strata.rs  testing_data.rs
model_data_structures/src/models/animation/: animation_connections.rs  animation_frames.rs  animation_frames_iterators.rs  errors.rs  model_animator.rs
model_data_structures/src/models/model_appearance/: sprites.rs
model_data_structures/src/screen/: errors.rs  model_storage.rs
model_macros/: Cargo.toml
model_macros/src/: lib.rs  traits.rs
object_macros/: Cargo.toml
object_macros/src/: lib.rs  traits.rs
old_screen_printer/src/: printer.rs
screen_printer/: Cargo.toml
screen_printer/src/: dynamic_printer.rs  printer.rs
src/: clock.rs  data_types.rs  defaults.rs  errors.rs  general_data.rs  lib.rs  main.rs  objects.rs  prelude.rs  screen.rs
src/clock/: clock_struct.rs
src/general_data/: Coordinates.rs  config_builder.rs  coordinates.rs  file_logger.rs  hasher.rs  map_methods.rs  user_input.rs
src/models/: animation.rs  animation_file_parser.rs  animation_thread.rs  errors.rs  hitboxes.rs  model_data.rs  model_file_parser.rs  sprites.rs  traits.rs
src/models/animation/: animation_frames.rs  animation_frames_iterators.rs
src/objects/: errors.rs  hitboxes.rs  hollow_square.rs  object.rs  object_data.rs  object_movements.rs  sprites.rs  traits.rs
src/screen/: errors.rs  model_manager.rs  model_storage.rs  models.rs  object_screen_data.rs  objects.rs  pixel.rs  pixel_data_types.rs  printer.rs  run_screen_1.rs  screen_data.rs  screen_runs.rs  stored_worlds.rs
src/screen/pixel/: checks.rs  pixel_assignments.rs
src/screen/screen_runs/: screen_1.rs  test_screen.rs
tests/: clock_tests.rs  coordinates_tests.rs  general_data_tests.rs  model_manager.rs  model_tests.rs  models.rs  object_screen_data_tests.rs  object_tests.rs  pixel_tests.rs  screen.rs  screen_tests.rs
tests/models/: characters_in_strata.model  empty_name.model  empty_strata.model  equals_in_skin_field.model  incorrect_right_hand_side.model  missing_data.model  test_model_no_hitbox.model  test_square.model  wrong_strata_range.model
tests/worlds/: test_template.world
