[package]
name = "ascii_engine"
version = "0.1.0"
edition = "2021"

members = [
  "object_macros",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-channel = "0.5.6"
thread_clock = "0.2.0"
termios = "0.3.3"
oneshot = "0.1.5"
anyhow = "1.0.66"
guard = "0.5.1"
screen_printer = "0.1.1"
termion = "2.0.1"
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5.9"
config = "0.13.2"
rand = "0.8.5"
log4rs = "1.2.0"
log = "0.4.17"
chrono = "0.4.23"
object_macros = { path = "object_macros" }
