[package]
name = "ascii_engine"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
  "model_macros",
  "model_data_structures",
  "engine_math",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termios = "0.3.3"
termion = "2.0.1"
oneshot = "0.1.*"
anyhow = "1.*"
lazy_static = "1.4.0"
serde = { version = "1.0.*", features = ["derive"] }
toml = "0.8.*"
config = "0.13.*"
rand = "0.8.5"
log4rs = "1.2.0"
log = "0.4.*"
chrono = "0.4.*"
tokio = { version = "1.*", features = ["full"] }
event_sync = "0.3.0"
screen_printer = "0.2.7"
bincode = "1.3.3"

model_macros = { path = "model_macros" }
model_data_structures = { path = "model_data_structures" }
engine_math = { path = "engine_math" }
