[package]
name = "model_data_structures"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# members = [
#   "../engine_math",
# ]

[dependencies]
screen_printer = "0.2.6"
log = "0.4.*"

engine_math = { path = "../engine_math" }
