[package]
name = "model_data_structures"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
screen_printer = "0.2.6"
log = "0.4.*"
tokio = { version = "1.*", features = ["sync"] }
serde = { version = "1.0.*", features = ["derive"] }
toml = "0.7.*"
config = "0.13.*"
lazy_static = "1.4.*"
anyhow = "1.*"

engine_math = { path = "../engine_math" }
