[package]
name = "screen_printer"
version = "0.1.3"
edition = "2021"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
lazy_static = "1.4.0"
rand = "0.8.5"
termion = "*"
guard = "0.5.1"
log = "0.4.17"
